# discord-bot-py

./: .env.example  .gitignore.example  .pylintrc  README.md  main.py  pyproject.toml  setup.cfg  setup.py  zippers.py
.devcontainer/: devcontainer.json
modules/: Fetcher.py  FileHandle.py  FileHanlde.py  Logger.py  MusicBot.py  Ripper.py  Upload.py  Zipper.py  bot.py  downloader.py  fetch.py  logger.py  name_gen.py  unique_path.py  uploader.py  validate.py  zipfile.py  zipper.py
