[metadata]
name = example
version = 0.1.0
author = Piet Piraat
author_email = piet@piraat.com
description = Lets steal that media and bring it to the public
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.pietpiraat.nl

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
        logger
        discord.py
        python-dotenv
        validators
        requests
        discord
        discord_music_dl_bot.modules.MusicBot
        discord_music_dl_bot.modules.logger
        discord_music_dl_bot.modules.downloader
        discord_music_dl_bot.modules.fetch
        discord_music_dl_bot.modules.uploader
        discord_music_dl_bot.modules.bcolors
        discord_music_dl_bot.modules.MusicBot
        discord_music_dl_bot.modules.unique_path
        discord_music_dl_bot.modules.zipper
    

[flake8]
max-line-length=120

[options.extras_require]
notebook = jupyter
dev = 
    black==22.1.0
    flake8==4.0.1

[options.packages.find]
where=discord_music_dl_bot
include_package_data = True
